--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Yummy<span>.</span></h1>
+        <img src="assets/img/StellaYooMD.png" alt="">
       </a>
 
       <nav id="navbar" class="navbar">
