--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="row justify-content-between gy-5">
         <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
           <h2 data-aos="fade-up">Meet the Doctor<br>Stella Yoo, MD</h2>
-          <p data-aos="fade-up" data-aos-delay="100"> Los Angeles Koreatown <br> Radiation Oncologist.</p>
+          <p data-aos="fade-up" data-aos-delay="100"> Los Angeles Koreatown <br> Radiation Oncologist</p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
             <a href="#make-an-appt" class="btn-make-an-appt">Make an Appointment</a>
             <a href="https://www.youtube.com/watch?v=j-kQiySgH9w" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
@@ -121,7 +121,7 @@
 
               <div class="position-relative mt-4">
                 <img src="assets/img/about-2.jpg" class="img-fluid" alt="">
-                <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
+                <a href="https://www.youtube.com/watch?v=j-kQiySgH9w" class="glightbox play-btn"></a>
               </div>
             </div>
           </div>
