--- a/index.html
+++ b/index.html
@@ -106,19 +106,8 @@
           <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
             <div class="content ps-0 ps-lg-5">
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                Dr. Stella Yoo, MD, offers expertise in treating all cancers requiring state-of-the-art radiation therapy and is deeply committed to providing excellent evidence-based and culturally sensitive care for her patients and their families. Dr. Yoo graduated with honors from the University of California at Berkeley and earned her medical doctorate degree at Temple University in Philadelphia, PA where she was inducted into the Alpha Omega Alpha Honor Medical Society. She completed her residency training in radiation oncology at LAC+USC Medical Center/Keck School of Medicine of USC, where she served as Chief Resident and received the nationally prestigious ACGME David C. Leach award for her work in developing the first resident continuity clinic in the specialty. 
               </p>
-              <ul>
-                <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check2-all"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-              </ul>
-              <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
-              </p>
-
               <div class="position-relative mt-4">
                 <img src="assets/img/about-2.jpg" class="img-fluid" alt="">
                 <a href="https://www.youtube.com/watch?v=j-kQiySgH9w" class="glightbox play-btn"></a>
