--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
         </div>
 
         <div class="mb-3">
-          <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+          <iframe style="border:0; width: 100%; height: 350px;" src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.176115792625!2d-118.28891678454202!3d34.06499932450478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c78a9812fccd%3A0xb8240a2e450bf593!2sStella%20Yoo%2C%20MD!5e0!3m2!1sen!2sus!4v1679074272805!5m2!1sen!2sus" frameborder="0" allowfullscreen></iframe>
         </div><!-- End Google Maps -->
 
         <div class="row gy-4">
