--- a/index.html
+++ b/index.html
@@ -92,21 +92,19 @@
 
         <div class="section-header">
           <h2>About Dr. Stella Yoo</h2>
-          <p>Learn More <span>About Us</span></p>
+          <p>Los Angeles Koreatown <span>Radiation Oncologist</span></p>
         </div>
 
         <div class="row gy-4">
-          <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/about.jpg) ;" data-aos="fade-up" data-aos-delay="150">
+          <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/headshot-img.jpg) ;" data-aos="fade-up" data-aos-delay="150">
             <div class="call-us position-absolute">
               <h4>Book a Table</h4>
-              <p>+1 5589 55488 55</p>
+              <p>213-739-5090</p>
             </div>
           </div>
           <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
             <div class="content ps-0 ps-lg-5">
-              <p class="fst-italic">
-                Dr. Stella Yoo, MD, offers expertise in treating all cancers requiring state-of-the-art radiation therapy and is deeply committed to providing excellent evidence-based and culturally sensitive care for her patients and their families. Dr. Yoo graduated with honors from the University of California at Berkeley and earned her medical doctorate degree at Temple University in Philadelphia, PA where she was inducted into the Alpha Omega Alpha Honor Medical Society. She completed her residency training in radiation oncology at LAC+USC Medical Center/Keck School of Medicine of USC, where she served as Chief Resident and received the nationally prestigious ACGME David C. Leach award for her work in developing the first resident continuity clinic in the specialty. 
-              </p>
+               Dr. Stella Yoo, MD, offers expertise in treating all cancers requiring state-of-the-art radiation therapy and is deeply committed to providing excellent evidence-based and culturally sensitive care for her patients and their families. Dr. Yoo graduated with honors from the University of California at Berkeley and earned her medical doctorate degree at Temple University in Philadelphia, PA where she was inducted into the Alpha Omega Alpha Honor Medical Society. She completed her residency training in radiation oncology at LAC+USC Medical Center/Keck School of Medicine of USC, where she served as Chief Resident and received the nationally prestigious ACGME David C. Leach award for her work in developing the first resident continuity clinic in the specialty. 
               <div class="position-relative mt-4">
                 <img src="assets/img/about-2.jpg" class="img-fluid" alt="">
                 <a href="https://www.youtube.com/watch?v=j-kQiySgH9w" class="glightbox play-btn"></a>
