--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h2 data-aos="fade-up">Meet the Doctor<br>Stella Yoo, MD</h2>
           <p data-aos="fade-up" data-aos-delay="100"> Los Angeles Koreatown <br> Radiation Oncologist</p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#make-an-appt" class="btn-make-an-appt">Make an Appointment</a>
+            <a href="#make-an-appt" class="more-btn">Make an Appointment <i class="bx bx-chevron-right"></i></a>
             <a href="https://www.youtube.com/watch?v=j-kQiySgH9w" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
@@ -117,9 +117,11 @@
     </section><!-- End About Section -->
 
     <!-- ======= Why Us Section ======= -->
-    <section id="why-us" class="why-us section-bg">
+    <section id="CV" class="why-us section-bg">
       <div class="container" data-aos="fade-up">
-
+         <div class="section-header">
+          <p>Education/Experience <span>학력/경력</span></p>
+        </div>
         <div class="row gy-4">
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
