--- a/index.html
+++ b/index.html
@@ -98,10 +98,6 @@
         <div class="row gy-4">
           <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/headshot-img.jpg) ;" data-aos="fade-up" data-aos-delay="150">
              Dr. Stella Yoo, MD, offers expertise in treating all cancers requiring state-of-the-art radiation therapy and is deeply committed to providing excellent evidence-based and culturally sensitive care for her patients and their families. Dr. Yoo graduated with honors from the University of California at Berkeley and earned her medical doctorate degree at Temple University in Philadelphia, PA where she was inducted into the Alpha Omega Alpha Honor Medical Society. She completed her residency training in radiation oncology at LAC+USC Medical Center/Keck School of Medicine of USC, where she served as Chief Resident and received the nationally prestigious ACGME David C. Leach award for her work in developing the first resident continuity clinic in the specialty. 
-              <div class="call-us position-absolute">
-             <h4>Book a Table</h4>
-              <p>213-739-5090</p>
-            </div>
           </div>
           <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
             <div class="content ps-0 ps-lg-5">
@@ -126,14 +122,12 @@
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="why-box">
-              <h3>Why Choose Yummy?</h3>
+              <h3>Current Position</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-                Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+                Clinical Assistant Professor of Radiation Oncology<br>
+                Department of Radiation Oncology<br>
+                University of Southern California, Los Angeles, CA<br>
               </p>
-              <div class="text-center">
-                <a href="#" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
-              </div>
             </div>
           </div><!-- End Why Box -->
 
@@ -143,24 +137,33 @@
               <div class="col-xl-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-clipboard-data"></i>
-                  <h4>Corporis voluptates officia eiusmod</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                  <h4>Residency Training</h4>
+                  <p>University of Southern California, Los Angeles, CA</p>
                 </div>
               </div><!-- End Icon Box -->
 
               <div class="col-xl-4" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-gem"></i>
-                  <h4>Ullamco laboris ladore pan</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                  <h4>Medical School</h4>
+                  <p>Temple University School of Medicine, Philadelphia, PA</p>
                 </div>
               </div><!-- End Icon Box -->
 
               <div class="col-xl-4" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-inboxes"></i>
-                  <h4>Labore consequatur incidid dolore</h4>
-                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                  <h4>Undergraduate School</h4>
+                  <p>University of California, Berkeley, Berkeley, CA</p>
+                </div>
+              </div><!-- End Icon Box -->
+              
+              
+              <div class="col-xl-4" data-aos="fade-up" data-aos-delay="500">
+                <div class="icon-box d-flex flex-column justify-content-center align-items-center">
+                  <i class="bi bi-inboxes"></i>
+                  <h4>High School</h4>
+                  <p>Oxford Academy, Cypress, CA</p>
                 </div>
               </div><!-- End Icon Box -->
 
