--- a/index.html
+++ b/index.html
@@ -165,45 +165,6 @@
       </div>
     </section><!-- End Why Us Section -->
 
-    <!-- ======= Stats Counter Section ======= -->
-    <section id="stats-counter" class="stats-counter">
-      <div class="container" data-aos="zoom-out">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Clients</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Projects</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Workers</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-        </div>
-
-      </div>
-    </section><!-- End Stats Counter Section -->
-
     <!-- ======= Menu Section ======= -->
     <section id="menu" class="menu">
       <div class="container" data-aos="fade-up">
@@ -880,8 +841,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Contact</h2>
-          <p>Need Help? <span>Contact Us</span></p>
+          <h2>Contact Information</h2>
+          <p>Do not hesitate to reach out! <span>Contact Us</span></p>
         </div>
 
         <div class="mb-3">
@@ -895,7 +856,7 @@
               <i class="icon bi bi-map flex-shrink-0"></i>
               <div>
                 <h3>Our Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>500 South Virgil Avenue, Suite 101, Los Angeles, CA 90020</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -904,8 +865,8 @@
             <div class="info-item d-flex align-items-center">
               <i class="icon bi bi-envelope flex-shrink-0"></i>
               <div>
-                <h3>Email Us</h3>
-                <p>contact@example.com</p>
+                <h3>Email</h3>
+                <p>stellayo@usc.edu</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -915,7 +876,7 @@
               <i class="icon bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
+                <p>213-739-5090</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -925,8 +886,8 @@
               <i class="icon bi bi-share flex-shrink-0"></i>
               <div>
                 <h3>Opening Hours</h3>
-                <div><strong>Mon-Sat:</strong> 11AM - 23PM;
-                  <strong>Sunday:</strong> Closed
+                <div><strong>Mon-Fri:</strong> 8AM - 4PM;
+                  <strong>Sat-Sun:</strong> Closed
                 </div>
               </div>
             </div>
@@ -972,8 +933,8 @@
           <div>
             <h4>Address</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022 - US<br>
+              500 South Virgil Avenue, Suite 101 <br>
+              Los Angeles, CA 90020 - US<br>
             </p>
           </div>
 
@@ -984,8 +945,8 @@
           <div>
             <h4>Reservations</h4>
             <p>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Phone:</strong> 213-739-5090<br>
+              <strong>Email:</strong> stellayo@usc.edu<br>
             </p>
           </div>
         </div>
@@ -995,8 +956,8 @@
           <div>
             <h4>Opening Hours</h4>
             <p>
-              <strong>Mon-Sat: 11AM</strong> - 23PM<br>
-              Sunday: Closed
+              <strong>Mon-Fri: 8AM</strong> - 4PM<br>
+              Sat-Sun: Closed
             </p>
           </div>
         </div>
