--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
         <div class="row gy-4">
           <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/headshot-img.jpg) ;" data-aos="fade-up" data-aos-delay="150">
              Dr. Stella Yoo, MD, offers expertise in treating all cancers requiring state-of-the-art radiation therapy and is deeply committed to providing excellent evidence-based and culturally sensitive care for her patients and their families. Dr. Yoo graduated with honors from the University of California at Berkeley and earned her medical doctorate degree at Temple University in Philadelphia, PA where she was inducted into the Alpha Omega Alpha Honor Medical Society. She completed her residency training in radiation oncology at LAC+USC Medical Center/Keck School of Medicine of USC, where she served as Chief Resident and received the nationally prestigious ACGME David C. Leach award for her work in developing the first resident continuity clinic in the specialty. 
-          </div>
+          
+                <img src="assets/img/about-2.jpg" class="img-fluid" alt="">
+                <a href="https://www.youtube.com/watch?v=j-kQiySgH9w" class="glightbox play-btn"></a></div>
           <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
             <div class="content ps-0 ps-lg-5">
                <div class="position-relative mt-4">
-                <img src="assets/img/about-2.jpg" class="img-fluid" alt="">
-                <a href="https://www.youtube.com/watch?v=j-kQiySgH9w" class="glightbox play-btn"></a>
               </div>
             </div>
           </div>
