--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </ul>
       </nav><!-- .navbar -->
 
-      <a class="btn-make-an-appt" href="#make-an-appt">Make an Appointment</a>
+      <a class="btn-book-a-table" href="#book-a-table">Make an Appointment</a>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
 
@@ -73,7 +73,7 @@
           <h2 data-aos="fade-up">Meet the Doctor<br>Stella Yoo, MD</h2>
           <p data-aos="fade-up" data-aos-delay="100"> Los Angeles Koreatown <br> Radiation Oncologist</p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#make-an-appt" class="more-btn">Make an Appointment <i class="bx bx-chevron-right"></i></a>
+            <a href="#book-a-table" class="more-btn">Make an Appointment <i class="bx bx-chevron-right"></i></a>
             <a href="https://www.youtube.com/watch?v=j-kQiySgH9w" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
@@ -752,7 +752,7 @@
     </section><!-- End Chefs Section -->
 
     <!-- ======= Make an Appt Section ======= -->
-    <section id="make-an-appt" class="make-an-appt">
+    <section id="book-a-table" class="book-a-table">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
