--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h2 data-aos="fade-up">Meet the Doctor<br>Stella Yoo, MD</h2>
           <p data-aos="fade-up" data-aos-delay="100"> Los Angeles Koreatown <br> Radiation Oncologist</p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#book-a-table" class="more-btn">Make an Appointment <i class="bx bx-chevron-right"></i></a>
+            <a href="#book-a-table" class="btn-book-a-table">Make an Appointment <i class="bx bx-chevron-right"></i></a>
             <a href="https://www.youtube.com/watch?v=j-kQiySgH9w" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
