--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <div class="container">
       <div class="row justify-content-between gy-5">
         <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
-          <h2 data-aos="fade-up">Meet the Doctor Stella Yoo, MD</h2>
-          <p data-aos="fade-up" data-aos-delay="100">Los Angeles Koreatown <br> Radiation Oncologist</p>
+          <h2 data-aos="fade-up">Meet the Doctor!</h2>
+          <p data-aos="fade-up" data-aos-delay="100">Dr. Stella Yoo, MD, is a board-certified radiation oncologist practicing in Los Angeles Koreatown</p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
             <a href="#book-a-table" class="btn-book-a-table">Make an Appointment</a>
             <a href="https://www.youtube.com/watch?v=j-kQiySgH9w" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
