--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
             <a href="#contact" class="btn-book-a-table">Make an Appointment</a>
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <a href="https://www.youtube.com/watch?v=j-kQiySgH9w" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
         <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
@@ -143,7 +143,7 @@
               <br>
               <div class="position-relative mt-4">
                 <img src="assets/img/about-2.jpg" class="img-fluid" alt="">
-                <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
+                <a href="https://www.youtube.com/watch?v=j-kQiySgH9w" class="glightbox play-btn"></a>
               </div>
             </div>
           </div>
